--- a/my-app/src/components/Header/HeaderLabel/HeaderLabel.css
+++ b/my-app/src/components/Header/HeaderLabel/HeaderLabel.css
@@ -53,12 +53,12 @@
     text-decoration: none;
     color: #6B6630;
     font-size: 1.8rem;
-    /* transition: color 0.7s ease; */
+    transition: color 0.3s ease; 
   }
 
-  /* .headerlabel-title-link:hover {
-   color: rgb(165, 178, 139);
- } */
+  .headerlabel-title-link:hover {
+   color: #ADA86D;
+ } 
 
 .headerlabel-subtitle {
     font-family: "Dela Gothic One", sans-serif;
