--- a/my-app/src/pages/SupportLink/SupportLink.css
+++ b/my-app/src/pages/SupportLink/SupportLink.css
@@ -1,7 +1,7 @@
 
 
 .supportlink-block {
-    margin: 80px auto;
+    margin: 80px auto 50px auto;
     padding: 0 20px;
     max-width: 1200px;
     min-height: calc(100vh - 160px); 
