--- a/my-app/src/components/MainMenu/MainMenu.css
+++ b/my-app/src/components/MainMenu/MainMenu.css
@@ -19,8 +19,7 @@
 }
 
 /* Стили для блоков banner и gallery */
-.main-block-banner,
-.main-block-gallery {
+.main-block-menu {
     min-width: 0;
     background: #D3BDA4;
     padding: 0 20px 20px;
@@ -32,12 +31,11 @@
     box-sizing: border-box;
 }
 
-.main-block-gallery {
+.main-block-menu {
     width: 100%;
 }
 
-.main-block-banner__header,
-.main-block-gallery__header {
+.main-block-menu__header {
     font-family: "Dela Gothic One", sans-serif;
     font-weight: 400;
     font-style: normal;
@@ -63,7 +61,7 @@
     }
 }
 
-.gallery-container {
+.menu-container {
     display: flex;
     gap: 10px;
     justify-content: center;
@@ -352,7 +350,7 @@
 
 /* ===== LAPTOP (1024px - 1440px) ===== */
 @media (min-width: 1024px) {
-    .main-block-gallery {
+    .main-block-menu {
         width: 60%;
     }
     
