--- a/my-app/src/components/MapBlock/MapBlock.css
+++ b/my-app/src/components/MapBlock/MapBlock.css
@@ -1,3 +1,15 @@
+.main-block-map {
+    min-width: 0;
+    background: #D3BDA4;
+    padding: 0 20px 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    width: 100%;
+    box-sizing: border-box;
+}
+
 .map-container {
     width: 100%;
     max-width: 800px;
