--- a/my-app/src/components/RegisterForm/RegisterForm.css
+++ b/my-app/src/components/RegisterForm/RegisterForm.css
@@ -1,5 +1,3 @@
-
-
 .register-layout {
     display: grid;
     grid-template-columns: 1fr;
@@ -17,7 +15,7 @@
 /* Форма регистрации СЛЕВА */
 .register-form-container {
     background: rgba(245, 236, 219, 0.95);
-    padding: 30px 25px;
+    /* padding: 30px 25px; */
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -145,7 +143,7 @@
 /* Блок социальных сетей СПРАВА */
 .social-sidebar {
     background: #6B6630;
-    padding: 30px 25px;
+    /* padding: 30px 25px; */
     text-align: center;
     color: #F5ECDB;
     display: flex;
@@ -261,12 +259,12 @@
     }
     
     .social-sidebar {
-        padding: 50px 40px;
+        padding: 30px 0px 20px 0px;
         order: 2;
     }
     
     .register-form-container {
-        padding: 50px 40px;
+        padding: 30px 40px;
         order: 1;
     }
     
@@ -283,14 +281,14 @@
     .register-layout {
         max-width: 1000px;
     }
-    
+/*     
     .social-sidebar {
         padding: 60px 50px;
-    }
+    } */
     
-    .register-form-container {
+    /* .register-form-container {
         padding: 60px 50px;
-    }
+    } */
     
     .cups-title {
         font-size: 60px;
